[gd_scene load_steps=8 format=2]

[ext_resource path="res://Interface/Counter/Ores/Ore_Counter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interface/Counter/Logs/Log_Counter.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interface/Counter/Shovels/Shovel_Counter.tscn" type="PackedScene" id=3]
[ext_resource path="res://Interface/Interface.gd" type="Script" id=4]
[ext_resource path="res://Interface/Counter/Logs/Log_Counter.gd" type="Script" id=5]
[ext_resource path="res://Interface/Counter/Ores/Ore_Counter.gd" type="Script" id=6]
[ext_resource path="res://Interface/Counter/Shovels/Shovel_Counter.gd" type="Script" id=7]

[node name="Interface" type="Control"]
margin_left = -1533.0
margin_top = -900.0
margin_right = 1536.0
margin_bottom = 901.0
script = ExtResource( 4 )

[node name="Backpack" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 732.0
margin_bottom = 110.0

[node name="Log_Counter" parent="Backpack" instance=ExtResource( 2 )]
margin_right = 200.0
margin_bottom = 94.0
script = ExtResource( 5 )

[node name="Ore_Counter" parent="Backpack" instance=ExtResource( 1 )]
margin_left = 204.0
margin_right = 404.0
margin_bottom = 94.0
script = ExtResource( 6 )

[node name="Shovel_Counter" parent="Backpack" instance=ExtResource( 3 )]
margin_left = 408.0
margin_right = 608.0
margin_bottom = 94.0
script = ExtResource( 7 )

[connection signal="granite_changed" from="." to="Backpack/Ore_Counter" method="_on_Interface_granite_changed"]
[connection signal="logs_changed" from="." to="Backpack/Log_Counter" method="_on_Interface_logs_changed"]
[connection signal="spade_changed" from="." to="Backpack/Shovel_Counter" method="_on_Interface_spade_changed"]
